<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED">

    <Button
        android:id="@+id/overlayISimButtonMain"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/add_overlay"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/effectISimButtonMain"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_effect"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/overlayISimButtonMain"
        app:layout_constraintEnd_toStartOf="@+id/overlayISimButtonMain"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startISimButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start_simulation"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/viewISimMain"
        android:layout_width="341dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/startISimButtonMain"
        app:layout_constraintEnd_toEndOf="@+id/overlayISimButtonMain"
        app:layout_constraintStart_toStartOf="@+id/effectISimButtonMain"
        app:layout_constraintTop_toBottomOf="@+id/overlayISimButtonMain"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/uploadPhotoButton"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginTop="136dp"
        android:text="@string/upload_photo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/viewISimMain"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/viewISimMain"
        app:layout_constraintTop_toTopOf="@+id/viewISimMain" />

    <Button
        android:id="@+id/takePhotoButton"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="172dp"
        android:text="@string/take_photo"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/viewISimMain"
        app:layout_constraintEnd_toEndOf="@+id/uploadPhotoButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/uploadPhotoButton"
        app:layout_constraintTop_toBottomOf="@+id/uploadPhotoButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>