<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/chooseASim"
        android:layout_width="300dp"
        android:layout_height="132dp"
        android:layout_marginTop="88dp"
        android:lines="2"
        android:text="@string/choose_a_simulation_type"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/textButton"
        android:layout_width="148dp"
        android:layout_height="67dp"
        android:layout_marginTop="92dp"
        android:text="@string/text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseASim" />

    <Button
        android:id="@+id/imageButton"
        android:layout_width="148dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/image"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textButton"
        app:layout_constraintStart_toStartOf="@+id/textButton"
        app:layout_constraintTop_toBottomOf="@+id/textButton"
        app:layout_constraintVertical_bias="0.275" />
</androidx.constraintlayout.widget.ConstraintLayout>