<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DummyTextSimActivity"
    android:background="#EDEDED">

    <Button
        android:id="@+id/overlayTSimButton"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_overlay"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dummyTextSimVertGuideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/effectTSimButton"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_effect"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/overlayTSimButton"
        app:layout_constraintEnd_toStartOf="@+id/dummyTextSimVertGuideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startTSimButton"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="runTSim"
        android:text="@string/start_simulation"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTSim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="Text"
        android:background="#FFFFFF"
        android:ems="10"
        android:fadeScrollbars="false"
        android:gravity="start|top"
        android:hint="@string/dummy_text"
        android:inputType="textMultiLine"
        android:maxLines="20"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:scrollbars="vertical"
        android:text="@string/dummy_text"
        app:layout_constraintBottom_toTopOf="@+id/startTSimButton"
        app:layout_constraintEnd_toEndOf="@+id/overlayTSimButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/effectTSimButton"
        app:layout_constraintTop_toBottomOf="@+id/overlayTSimButton"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dummyTextSimVertGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>